<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">ChengDu Bus</string>
    <string name="test_activity">IC Card Records</string>
    <string name="hello_world">Hello world!</string>
    <string name="home_activity">Home</string>
    <string name="title_activity_tab_home">Home</string>
    <string name="title_activity_bus_station">BusStationActivity</string>
    <string name="title_activity_about">About</string>
    <string name="version">Version: <xliff:g id="version" example="1.0">%1$s</xliff:g></string>
    <string name="copyright">Copyright ©2012–2013 Telepathic Ltd.&lt;br/>All Rights Reserved.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <!-- Domob ad publisher id -->
    <string name="publisher_id">56OJzuCIuNVkpCXsnR</string>
    <string name="InlinePPID">16TLmNLoApF1iY2BA8B19FRk</string>

    <!-- Tab name -->
    <string name="bus_location">Map Location</string>
    <string name="card_records">Card Records</string>
    <string name="bus_stations">Bus Stations</string>
    <string name="bus_transfer">Bus Transfer</string>
    <string name="bus_line">Bus Line</string>

    <string name="menu_settings">Settings</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="find">Find</string>
    <string name="down_offline_map">Download offline map</string>
    <string name="remove_offline_map">Remove offline map</string>
    <string name="update_offline_map">Update offline map</string>
    <string name="clear_cache">Clear cache</string>
    <string name="delete_card">Delete card</string>
    <string name="delete">Delete</string>
    <string name="bus_number_hint">Bus line number</string>
    <string name="ic_card_hint">IC card number</string>
    <string name="station_number_hint">GPS number or Station name</string>
    <string name="find_bus_route">Finding bus route, please wait.</string>
    <string name="find_ic_card_records">Finding ic card records, please wait.</string>
    <string name="find_station_information">Finding bus station information, please wait.</string>
    <string name="find_transfer_information">Finding bus transfer information, please wait.</string>
    <string name="select_bus_route">请选择%s路行驶方向</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Continue</string>
    <string name="default_city">成都</string>
    <string name="invalid_input_hint">Please Input the correct bus number</string>
    <string name="no_bus_card_records">No bus card records</string>
    <string name="no_bus_station_lines">No bus station lines</string>
    <string name="no_bus_lines">No bus lines</string>
    <string name="starting_time">Starting time: <xliff:g id="starting_time" example="6:00">%1$s</xliff:g></string>
    <string name="ending_time">Ending time: <xliff:g id="ending_time" example="21:00">%1$s</xliff:g></string>
    <string name="confirm_exit_title">Exit</string>
    <string name="confirm_exit_message">Do you want to exit?</string>
    <string name="confirm_clean_cache_title">Clear cache</string>
    <string name="confirm_clean_bus_line_cache">Do you want to clear the cached bus lines ?</string>
    <string name="confirm_clean_bus_card_cache">Do you want to clear the cached bus card consumption ?</string>
    <string name="confirm_clean_bus_station_cache">Do you want to clear the cached bus stations ?</string>
    <string name="gps_number">GPS number : <xliff:g id="gps_number" example="50001">%1$s</xliff:g></string>
    <string name="delete_complete">Complete</string>
    <string name="start_station_hint">Start station</string>
    <string name="end_station_hint">End station</string>
    <string name="start_end_stations"><xliff:g id="start_station" example="华阳客运站">%1$s</xliff:g> ↔ <xliff:g id="start_station" example="桂溪公交站">%2$s</xliff:g></string>
    <string name="no_station_name_tips">Please input the station name</string>
    <string name="transfer_scheme_title">Transfer <xliff:g id="times" example="1">%1$s</xliff:g> time(s) <xliff:g id="transfer_bus" example="501→112">%2$s</xliff:g></string>
    <string name="direct_title">Direct <xliff:g id="transfer_bus" example="501">%1$s</xliff:g></string>
    <string name="transfer_step_content">Take &lt;font color="#0099CC">bus <xliff:g id="line" example="501">%1$s</xliff:g>&lt;/font> to &lt;font color="#0099CC"><xliff:g id="end_station" example="火车南站">%2$s</xliff:g>&lt;/font></string>
    <string name="transfer_scheme_detail">Take bus <xliff:g id="bus_number" example="501">%2$s</xliff:g> from <xliff:g id="start_station" example="华阳绕城路口">%1$s</xliff:g> to <xliff:g id="end_station" example="火车南站">%3$s</xliff:g></string>
    <string name="transfer_arrow">→</string>
    <string name="select_a_station">Please select a station by GPS number</string>
    <string name="unknown">unknown</string>
    <string name="remove">Remove</string>
    <string name="offline_map_continue">Continue</string>
    <string name="offline_map">Offline Map</string>
    <string name="offline_map_tips">App will download offline map data of Chengdu(About %1$s), Do you want to continue?</string>
    <string name="offline_map_download_title">Download Offline Map</string>
    <string name="offline_map_downloading">Downloading…</string>
    <string name="offline_map_pause">Pause</string>
    <string name="offline_map_update_tips">Offline map data of Chengdu need update(About %1$s), Do you want to continue?</string>
    <string name="offline_map_continue_down_tips">The offline map data of Chengdu has been downloaded %1$s, there is %2$s remain, Do you want to continue?</string>
    <string name="offline_map_remove_title">Remove offline map</string>
    <string name="offline_map_remove_msg">The offline map data of Chengdu will be removed, Do you want to continue?</string>
    <string name="offline_map_no_external_storage">Please insert SD card and then download the offline map data</string>

    <!-- consumer record retrieve -->
    <string name="card_id_error_notice">请输入正确的公交卡号</string>
    <string name="line_number">公交路线:</string>
    <string name="bus_number">车辆编号:</string>
    <string name="consumer_count">消费次数: <xliff:g id="consumer_count" example="2">%1$s</xliff:g></string>
    <string name="consumer_amount">消费金额: <xliff:g id="consumer_amount" example="1.8">%1$s</xliff:g></string>
    <string name="residual_count">剩余次数: <xliff:g id="residual_count" example="10">%1$s</xliff:g></string>
    <string name="residual_amount">剩余金额: <xliff:g id="residual_amount" example="46.40">%1$s</xliff:g></string>

    <!-- Drop refresh listview -->
    <string name="release_to_refresh">Release to refresh</string>
    <string name="pull_to_refresh">Pull down to refresh</string>
    <string name="refreshing">Refreshing…</string>

    <!-- Toast messages -->
    <string name="start_get_location">start to get the bus location&#8230;</string>
    <string name="get_location_finished">get bus location done。</string>

    <!-- Generic Error messages -->
    <string name="error_unknown">Unknown Error</string>
    <string name="error_no_network">No Network</string>
    <string name="error_no_data">No Data</string>
    <string name="error_time_out">time out</string>

    <!-- Baidu map error message definition -->
    <string name="error_location_falied">定位失败</string>
    <string name="error_network_connect">网络连接错误</string>
    <string name="error_network_data">网络数据错误</string>
    <string name="error_permission_denied">授权验证失败</string>
    <string name="error_result_not_found">未找到搜索结果</string>
    <string name="error_route_addr">路线搜索起点或终点有歧义</string>

    <!-- Kuai xin error message definition -->
    <string name="error_gps_number_not_present">The GPS number is not present.</string>
    <string name="error_station_name_not_present">The station name is not present.</string>

    <!-- Toast generic error messages -->
    <string name="invalid_line_number">Invalid bus line number.</string>
    <string name="invalid_card_number">Invalid bus car number.</string>
    <string name="invalid_gps_number">Invalid bus statin gps number.</string>
    <string name="station_line_data_error">The bus line information error, please clear cache and try again.</string>

    <!-- Toast network error messages -->
    <string name="search_bus_line_failed">Search bus line failed: <xliff:g id="failed_reason">%1$s</xliff:g></string>
    <string name="search_bus_route_failed">Search bus route failed: <xliff:g id="failed_reason">%1$s</xliff:g></string>
    <string name="get_bus_transfer_failed">Get bus transfer failed: <xliff:g id="failed_reason">%1$s</xliff:g></string>
    <string name="get_bus_card_records_failed">Get bus card record failed: <xliff:g id="failed_reason">%1$s</xliff:g></string>
    <string name="get_bus_station_lines_failed">Get bus station lines failed: <xliff:g id="failed_reason">%1$s</xliff:g></string>


    <!-- App description -->
    <string name="app_description">Finder is an app help you to find the location of bus in Chengdu. It also supply to query IC card consumption records by card number, and query bus station information by station GPS number.&lt;br/>&lt;br/>If you get any questions, Please contact us by Email&lt;br/>telepathic.ltd@gmail.com&lt;br/>&lt;br/>Thanks for using this app!</string>

</resources>
