<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/search_card_record"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ic_menu_search_holo_light"
        app:showAsAction="always|collapseActionView|withText"
        android:title="@string/find"/>
    <item
        android:id="@+id/delete_card"
        app:showAsAction="never"
        android:title="@string/delete_card"/>
    <item
        android:id="@+id/clear_cache"
        app:showAsAction="never"
        android:title="@string/clear_cache"/>
    <item
        android:id="@+id/about"
        app:showAsAction="never"
        android:title="@string/title_activity_about" />

</menu>
